# discord_api

./: Cargo.toml  LICENSE  README.md  aliases.js  search-index.js  settings.html  source-files.js
.github/workflows/: clippy_push.yml  docs.yml  release.yml  test.yml
discord/: all.html  constant.DESCRIPTION.html  constant.VERSION.html  fn.main.html  index.html  sidebar-items.js
discord/apps/: index.html  sidebar-items.js
discord/apps/invite/: fn.get_app.html  fn.handle_input.html  index.html  sidebar-items.js
discord/apps/invite/features/: fn.get_app.html  fn.handle_input.html  index.html
discord/apps/invite/welcome/: fn.get_app.html  fn.handle_input.html  index.html  sidebar-items.js
discord_api/: all.html  index.html  sidebar-items.js
discord_api/http/: fn.get_invite.html  index.html  sidebar-items.js
discord_api/models/: index.html  sidebar-items.js  struct.Invite.html  struct.InviteGuild.html  struct.WelcomeChannel.html  struct.WelcomeScreen.html
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
lib/: http.rs  lib.rs  models.rs
src/: http.rs  main.rs
src/apps/invite/: features.rs  mod.rs  welcome.rs
src/discord/: main.rs.html
src/discord/apps/: mod.rs.html
src/discord/apps/invite/: features.rs.html  mod.rs.html  welcome.rs.html
src/discord_api/: http.rs.html  lib.rs.html  models.rs.html
