[package]
name = "discord"
description = "Interact with the Discord API from your shell"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jos-b/discord"
version = "0.1.0"
keywords = ["cli", "discord", "api", "shell", "tool"]
categories = ["command-line-interface", "command-line-utilities"]
authors = ["Joe Banks <joseph@josephbanks.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2", features = ["macros"] }
serde_json = "1.0"
colored = "1.9"
log = "0.4.8"
simple_logger = "1.6.0"
